<resources>
    <string name="app_name">Courses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="courses">Courses</string>
    <string name="course_id">Course id</string>
    <string name="is_edit">Is edit</string>
    <string name="delete_course_confirmation">Are you sure you want to delete this course ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_to_delete_course">Faild to delete</string>
    <string name="delete_confirmation">Confirm delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">Course name</string>
    <string name="course_description">Course description</string>
    <string name="add">Add</string>
    <string name="new_course">New course</string>
    <string name="update_course">Update course</string>
    <string name="success">Success</string>
    <string name="failed_to_add_course">Failed</string>
    <string name="course_notes">Course notes</string>
    <string name="all_notes">All notes</string>
    <string name="note_id">Note id</string>
    <string name="note_title">Note title</string>
    <string name="note_content">Note content</string>
    <string name="new_note">New note</string>
    <string name="update_note">Update note</string>
</resources>